// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-slider soui-slider-wrapper"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-background"
      />
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 62.5%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          1
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          2
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          3
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          5
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          8
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          13
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          21
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          34
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          55
        </div>
      </div>
    </div>
  </div>
  <div
    style="height: 20px;"
  />
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-20-000 "
      style="color: rgb(255, 255, 255); padding-inline-start: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      1/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-40-000 "
      style="color: rgb(255, 255, 255); padding-inline-start: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      2/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-60-000 "
      style="color: rgb(255, 255, 255); padding-inline-start: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      3/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-80-000 "
      style="color: rgb(255, 255, 255); padding-inline-start: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      4/5
    </div>
  </div>
  <div
    style="background: rgb(232, 235, 240); margin-bottom: 4px; line-height: 30px;"
  >
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-100-000 "
      style="color: rgb(255, 255, 255); padding-inline-start: 8px; background: rgb(25, 122, 250); font-size: 14px;"
    >
      5/5
    </div>
  </div>
</div>
`;

exports[`Grid[Base] should render correctly about gutter 1`] = `
<div
  style="background: rgb(232, 235, 240);"
>
  <div
    class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-100-000 "
    style="width: auto; display: block; margin-left: -4px; margin-right: -4px;"
  >
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/8
      </div>
    </div>
    <div
      class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-12-500 "
      style="padding-left: 4px; padding-right: 4px;"
    >
      <div
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/8
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid[Base] should render correctly about nested 1`] = `
<div
  class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-100-000 "
  style="text-align: center;"
>
  <div
    class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-50-000 "
    style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
  >
    1/2
  </div>
  <div
    class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-50-000 "
    style="line-height: 30px;"
  >
    <div
      style="font-size: 14px;"
    >
      1/2
    </div>
    <div>
      <div
        class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-33-333 "
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/3
      </div>
      <div
        class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-33-333 "
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(107, 181, 255); font-size: 14px;"
      >
        1/3
      </div>
      <div
        class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-33-333 "
        style="color: rgb(255, 255, 255); line-height: 30px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
      >
        1/3
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid[Base] should render correctly about offset 1`] = `
<div
  style="background: rgb(232, 235, 240);"
>
  <div
    class="soui-grid soui-grid-wrapper soui-grid-full soui-grid-md-33-333 soui-offset-md-33-333"
    style="color: rgb(255, 255, 255); line-height: 60px; text-align: center; background: rgb(25, 122, 250); font-size: 14px;"
  >
    With 1/3, Offset 1/3
  </div>
</div>
`;
